data/all_generated_tests/raw_wast_tests/return_TypeMismatchinControlFlowInstructions_3003.wast
;; 2. **Test with Mismatched Operand Stack Height**:    - Implement a function where the block expects two values on the operand stack (`i32` and `f32`), but only provide one value (`i32`) before invoking `return`.    - **Constraint:** Verifies the stack height and type consistency when `return` is used.    - **Type Mismatch:** Tests the adherence to operand stack requirements within control flow blocks.

(assert_invalid
  (module
    (func $mismatched-stack-height
      (block (result i32 f32)
        (i32.const 42)
        (return)
      )
    )
  )
  "type mismatch"
)